changed some english text to french

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="col-lg-6 col-12">
           <div class="about-five-content">
             <h6 class="small-title text-lg">NOTRE HISTOIRE</h6>
-            <h2 class="main-title fw-bold">Notre équipe est éfficace et expérimentée</h2>
+            <h2 class="main-title fw-bold">Notre équipe est efficace et expérimentée</h2>
             <div class="about-five-tab">
               <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -542,8 +542,8 @@ Si vous avez des besoins ponctuels pour des conseils fiscaux selon des projets, 
     <div class="container">
       <div class="row justify-content-center mb-4">
         <div class="col-md-7 text-center">
-          <h3 class="mb-3">Experienced & Professional Team</h3>
-          <h6 class="subtitle">You can relay on our amazing features list and also our customer services will be great experience for you without doubt and in no-time</h6>
+          <h3 class="mb-3">Une équipe de professionnels </h3>
+          <h6 class="subtitle">Vous pouvez compter sur nos skills et nos services afin de vous faciliter la vie en un rien de temps</h6>
         </div>
       </div>
       <div class="row">
@@ -556,8 +556,8 @@ Si vous avez des besoins ponctuels pour des conseils fiscaux selon des projets, 
             </div>
             <div class="col-md-6 text-center">
               <div class="pt-2">
-                <h5 class="mt-4 font-weight-medium mb-0">Michael Doe</h5>
-                <h6 class="subtitle mb-3">Property Specialist</h6>
+                <h5 class="mt-4 font-weight-medium mb-0">Lahcen Oughcha</h5>
+                <h6 class="subtitle mb-3">Comptable et fondateur de ATS</h6>
                 <p>You can relay on our amazing features list and also our customer services will be great experience.</p>
                 <ul class="list-inline">
                   <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i class="icon-social-facebook"></i></a></li>
@@ -578,8 +578,8 @@ Si vous avez des besoins ponctuels pour des conseils fiscaux selon des projets, 
             </div>
             <div class="col-md-6 text-center">
               <div class="pt-2">
-                <h5 class="mt-4 font-weight-medium mb-0">Michael Doe</h5>
-                <h6 class="subtitle mb-3">Property Specialist</h6>
+                <h5 class="mt-4 font-weight-medium mb-0">Rami Boudaoua</h5>
+                <h6 class="subtitle mb-3">comptable</h6>
                 <p>You can relay on our amazing featurdrsbdbdbdfbdbdfbdfes list and also our customer services will be great experience.</p>
                 <ul class="list-inline">
                   <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i class="icon-social-facebook"></i></a></li>
