removed some useless code, fixed pdf "general conditions" on phones

--- a/index.html
+++ b/index.html
@@ -974,8 +974,8 @@ Si vous avez des besoins ponctuels pour des conseils fiscaux selon des projets, 
                 <h5>Informations</h5>
                 <ul>
 
-                  <li><a href="assets/conditions/CONDITIONS GENERALES ATS (1).pdf">Conditions générales</a></li>
-                  <li><a href="assets/conditions/GDPR.docx.pdf">Politique de protection de la vie privée</a></li>
+                  <li><a target="_blank" href="assets/conditions/CONDITIONS GENERALES ATS (1).pdf">Conditions générales</a></li>
+                  <li><a target="_blank" href="assets/conditions/GDPR.docx.pdf">Politique de protection de la vie privée</a></li>
                 </ul>
                 
               </div>
