added SVG logos, change the sticky bar size and logo size depending on device

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/images/L" alt="Logo" />
+              <img src="assets/images/Logo pour SVG White.svg" alt="Logo" class="white-logo" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNine"
               aria-controls="navbarNine" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,8 +88,8 @@
       <a class="close" href="#close"><i class="lni lni-close"></i></a>
     </div>
     <div class="sidebar-content">
-      <div class="sidebar-logo">
-        <a href="index.html"><img src="assets/images/Logo complet en noir-8.svg" alt="Logo" /></a>
+      <div class="sidebar-logo ">
+        <a href="index.html"><img src="assets/images/Logo complet en noir-8.svg" alt="Logo" class="black-logo"/></a>
       </div>
       <p id = "titreAts" class="text">ATS vous propose des solutions intérimaires ou d’externalisation complète de votre comptabilité.</p>
       <!-- logo -->
@@ -942,7 +942,7 @@ Si vous avez des besoins ponctuels pour des conseils fiscaux selon des projets, 
               <div class="footer-widget f-about">
                 <div class="logo">
                   <a href="index.html">
-                    <img src="assets/images/Logo complet en noir-8.svg" alt="#" class="img-fluid" />
+                    <img src="assets/images/rouge logo.svg" alt="#" class="red-icon-logo" />
                   </a>
                 </div>
                 <p>
