fixed size matter on rotation,  changed padding on navbar, deleted index1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>ATS | ACCOUNTING & TAX SOLUTIONS</title>
 
   <!--====== Favicon Icon ======-->
-  <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/svg" />
+  <link rel="shortcut icon" href="https://en.wikipedia.org/favicon.ico" type="image/svg" />
 
   <!--====== Bootstrap css ======-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -1055,9 +1055,6 @@ Si vous avez des besoins ponctuels pour des conseils fiscaux selon des projets, 
 
     let closeNavBar = function(){navbarTogglerNine.classList.toggle("active")
      navbarCollapse.classList.toggle("show")}
-
-    let closeSideBar = function(){sidebarLeft.classList.remove("open");
-      overlayLeft.classList.remove("open");}
     
   
     //========= glightbox
