added favicon, changed background color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>ATS | ACCOUNTING & TAX SOLUTIONS</title>
 
   <!--====== Favicon Icon ======-->
-  <link rel="shortcut icon" href="https://en.wikipedia.org/favicon.ico" type="image/svg" />
+  <link rel="shortcut icon" href="assets/images/Icône ATS 16px.svg" type="image/svg" />
 
   <!--====== Bootstrap css ======-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
